WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226899
REGRESSION: (
r278544
) [ Mac-wk1 ] media/media-continues-playing-after-replace-source.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=226899
Summary
REGRESSION: (r278544) [ Mac-wk1 ] media/media-continues-playing-after-replace...
Truitt Savell
Reported
2021-06-10 14:31:01 PDT
media/media-continues-playing-after-replace-source.html this test has been flaky failing sense the changes in
https://trac.webkit.org/changeset/278544/webkit
History:
https://results.webkit.org/?suite=layout-tests&test=media/media-continues-playing-after-replace-source.html
Diff: --- /Volumes/Data/worker/bigsur-debug-tests-wk1/build/layout-test-results/media/media-continues-playing-after-replace-source-expected.txt +++ /Volumes/Data/worker/bigsur-debug-tests-wk1/build/layout-test-results/media/media-continues-playing-after-replace-source-actual.txt @@ -5,7 +5,7 @@ EVENT(playing) EXPECTED (testElement.currentTime > '0') OK Replacing the media's source element: -EXPECTED (testElement.currentTime == '0') OK +EXPECTED (testElement.currentTime == '0'), OBSERVED '0.205980314234375' FAIL EXPECTED (testElement.currentTime > '0') OK END OF TEST
Attachments
Patch
(12.02 KB, patch)
2021-06-10 15:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-06-10 14:31:42 PDT
<
rdar://problem/79160701
>
Truitt Savell
Comment 2
2021-06-10 14:33:43 PDT
This test is effecting wk1 queues
Chris Dumez
Comment 3
2021-06-10 14:33:53 PDT
Looking.
Chris Dumez
Comment 4
2021-06-10 15:41:16 PDT
Created
attachment 431147
[details]
Patch
Ryosuke Niwa
Comment 5
2021-06-10 16:58:15 PDT
Comment on
attachment 431147
[details]
Patch Maybe we can do the same for other media related code where we use callOnMainThread?
Chris Dumez
Comment 6
2021-06-10 16:58:47 PDT
(In reply to Ryosuke Niwa from
comment #5
)
> Comment on
attachment 431147
[details]
> Patch > > Maybe we can do the same for other media related code where we use > callOnMainThread?
Probably, I plan to follow up.
EWS
Comment 7
2021-06-10 18:02:12 PDT
Committed
r278746
(
238707@main
): <
https://commits.webkit.org/238707@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431147
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug