Source/WebCore/platform/graphics/MediaPlayer.h
@@ -284,6 +284,8 @@ public:
     virtual String audioOutputDeviceId() const { return { }; }
     virtual String audioOutputDeviceIdOverride() const { return { }; }
 
+    virtual void mediaPlayerQueueTaskOnEventLoop(Function<void()>&& task) { callOnMainThread(WTFMove(task)); }
+
 #if !RELEASE_LOG_DISABLED
     virtual const void* mediaPlayerLogIdentifier() { return nullptr; }
     virtual const Logger& mediaPlayerLogger() = 0;
@@ -386,6 +388,8 @@ public:
     void setShouldContinueAfterKeyNeeded(bool);
     bool shouldContinueAfterKeyNeeded() const { return m_shouldContinueAfterKeyNeeded; }
 #endif
+
+    void queueTaskOnEventLoop(Function<void()>&&);
 
     bool paused() const;
     bool seeking() const;
